--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,28 +1,30 @@
 name: cinemapedia
-description: "A new Flutter project."
-publish_to: "none"
+description: A new Flutter project.
+publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: ^3.9.2
+  sdk: '>=2.19.2 <3.0.0'
 
 dependencies:
-  animate_do: ^4.2.0
-  card_swiper: ^3.0.1
-  dio: ^5.9.0
+  animate_do: ^3.0.2
+  card_swiper: ^2.0.4
+  dio: ^5.0.0
   flutter:
     sdk: flutter
-  flutter_dotenv: ^6.0.0
-  flutter_riverpod: ^3.0.3
-  go_router: ^17.0.0
-  intl: ^0.18.1
+  flutter_dotenv: ^5.0.2
+  flutter_riverpod: ^2.2.0
+  go_router: ^6.0.9
+  intl: ^0.18.0
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
-  flutter_lints: ^5.0.0
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
 
 flutter:
   uses-material-design: true
+
   assets:
     - .env
